--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "start": "node index.js",
     "test": "mocha",
     "jslint": "jshint --exclude=node_modules/** **.js"
-
   },
   "author": "Yvonne Richa",
   "license": "ISC",
@@ -19,6 +18,7 @@
     "mongodb": "^2.1.7"
   },
   "devDependencies": {
+    "heroin-js": "^1.5.0",
     "jshint": "^2.9.1",
     "mocha": "2.4.5",
     "supertest": "1.2.0"
